--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
                     </p>
                 </div>
                 <div class="project">
-                    <img src="convert.PNG">
+                    <img src="convert.png">
                     <h2 class="project2">Convert IDR</h2>
                     <p class="textpro">Di Semester 1 lebih tepatnya sebelum UAS, saya dan Joseph mendapatkan tugas dari mata kuliah AP
                         untuk membuat sebuah aplikasi Java melalui NetBeans. Aplikasi yang kami buat
