--- a/basketball.html
+++ b/basketball.html
@@ -54,7 +54,7 @@
                 </div>
                 <div id="basket4">
                     <h2>PLAYERS</h2>
-                    <img src="roster.PNG">
+                    <img src="roster.png">
                 </div>
                 <div id="basket5">
                     <h2>!!!3 REASONS WHY BASKETBALL IS THE GREATEST SPORT!!!</h2>
