--- a/basketball.html
+++ b/basketball.html
@@ -23,7 +23,7 @@
                 </div>
             <div id="boxbasket">
                 <div id="basket">
-                    <img src="NBA.png">
+                    <img src="NBA.PNG">
                     <p>NBA adalah pertandingan bola basket pria yang diadakan di Amerika Serikat.
                         NBA ini diikuti oleh 30 tim. 30 tim ini dibagi menjadi 2 yaitu West dan East. Yang mana setiap tim bermain sebanyak 82 games.
                         NBA ini bisa disiarkan di Vidio.com dan juga NBA.tv. Tetapi jika tidak bisa melihat
@@ -54,7 +54,7 @@
                 </div>
                 <div id="basket4">
                     <h2>PLAYERS</h2>
-                    <img src="roster.png">
+                    <img src="roster.PNG">
                 </div>
                 <div id="basket5">
                     <h2>!!!3 REASONS WHY BASKETBALL IS THE GREATEST SPORT!!!</h2>
