--- a/basketball.html
+++ b/basketball.html
@@ -23,7 +23,7 @@
                 </div>
             <div id="boxbasket">
                 <div id="basket">
-                    <img src="NBA.PNG">
+                    <img src="NBA.png">
                     <p>NBA adalah pertandingan bola basket pria yang diadakan di Amerika Serikat.
                         NBA ini diikuti oleh 30 tim. 30 tim ini dibagi menjadi 2 yaitu West dan East. Yang mana setiap tim bermain sebanyak 82 games.
                         NBA ini bisa disiarkan di Vidio.com dan juga NBA.tv. Tetapi jika tidak bisa melihat
