--- a/project.html
+++ b/project.html
@@ -22,7 +22,7 @@
                 </div>
             <div id="boxluar">
                 <div class="project">
-                    <img src="reso.png">
+                    <img src="reso.PNG">
                     <h2 class="project2">WEBSITE FOR RESONANCE</h2>
                     <p class="textpro">
                         Di Semester 1, saya dan teman sekelompok saya mendapatkan tugas dari mata kuliah Introduction to IT
