--- a/interest.html
+++ b/interest.html
@@ -4,6 +4,7 @@
         <title>VinChrist's Website</title>
         <link rel="shortcut icon" href="logo.png" />
         <link rel="stylesheet" href="home.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="container">
